integ-tests/tests/snapshots/parser__datetimes__tz_neg3.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ tz_neg3:1:6
  │
1 │ tz = 2016-09-09T09:09:09Z-2:00
  │      ^^^^^^^^^^^^^ unable to parse number


