integ-tests/tests/snapshots/parser__datetimes__utc_invalid.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ utc_invalid:1:7
  │
1 │ utc = 2016-9-09T09:09:09Z
  │       ^^^^^^^^^^^^ unable to parse number


