integ-tests/tests/snapshots/parser__datetimes__utc_trailing_dot.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ utc_trailing_dot:1:7
  │
1 │ utc = 2016-09-09T09:09:09.Z
  │       ^^^^^^^^^^^^^ unable to parse number


